# heicConverterLib

./: pom.xml
c++/: CMakeLists.txt  compileCmd.txt
c++/src/: JNIConverter.cpp
src/main/java/org/converter/: JNIConverter.java
